tests/argo/overlays/istio/test_data/expected/default_networking.istio.io_v1alpha3_virtualservice_argo-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-ui
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /argo/
    rewrite:
      uri: /
    route:
    - destination:
        host: argo-ui..svc.cluster.local
        port:
          number: 80
