tests/argo/overlays/istio/test_data/expected/default_~g_v1_serviceaccount_argo.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    kustomize.component: argo
  name: argo
