tests/argo/overlays/istio/test_data/expected/kubeflow_~g_v1_service_argo-ui.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    getambassador.io/config: |-
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name: argo-ui-mapping
      prefix: /argo/
      service: argo-ui.
  labels:
    app: argo-ui
    kustomize.component: argo
  name: argo-ui
  namespace: kubeflow
spec:
  ports:
  - port: 80
    targetPort: 8001
  selector:
    app: argo-ui
    kustomize.component: argo
  sessionAffinity: None
  type: NodePort
